trunk/Archive2/87/2bfcaa70861a33/output
main.cpp:23:5: error: function 'foo' with deduced return type cannot be used before it is defined
    foo(indent<10>{});
    ^
main.cpp:8:17: note: 'foo' declared here
    friend auto foo(indent<N>);
                ^
main.cpp:22:5: warning: expression result unused [-Wunused-value]
    Y<10, int>{};
    ^         ~~
1 warning and 1 error generated.
